# api/ambulance-wl.openapi.yaml
@@ -16,6 +16,8 @@ tags:
   description: Ambulance Waiting List API
 - name: ambulanceConditions
   description: Patient conditions and symptoms handled in the ambulance
+- name: ambulanceExaminations
+  description: Examinations performed on patients in the ambulance
 
 paths:
   "/waiting-list/{ambulanceId}/entries":
@@ -224,6 +226,126 @@ paths:
                   $ref: "#/components/examples/ConditionsListExample"
         "404":
           description: Ambulance with such ID does not exists
+
+  "/examinations/{patientId}/{id}":
+    post:
+      tags:
+        - examinations
+      summary: Saves new examination definition
+      operationId: createExamination
+      description: Use this method to initialize new examination in the system
+      parameters:
+        - in: path
+          name: patientId
+          description: pass the id of the patient for whom the examination is being created
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: id
+          description: pass the id of the particular new examination
+          required: true
+          schema:
+            type: integer
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Examination"
+            examples:
+              request-sample:
+                $ref: "#/components/examples/ExaminationExample"
+        description: Examination details to store
+        required: true
+      responses:
+        "200":
+          description: >-
+            Value of stored examination
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Examination"
+              examples:
+                updated-response:
+                  $ref: "#/components/examples/ExaminationExample"
+        "400":
+          description: Missing mandatory properties of input object.
+        "409":
+          description: Entry with the specified id already exists.
+    put:
+      tags:
+        - examinations
+      summary: Updates specific examination definition
+      operationId: updateExamination
+      parameters:
+        - in: path
+          name: patientId
+          description: pass the id of the patient for whom the examination is being updated
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: id
+          description: pass the id of the particular examination to be updated.
+          required: true
+          schema:
+            type: integer
+          
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/Examination"
+            examples:
+              request:
+                $ref: "#/components/examples/ExaminationExample"
+        description: Examination details to update
+        required: true
+      responses:
+        "200":
+          description: >-
+            value of the examination with re-computed estimated time of
+            entry
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Examination"
+              examples:
+                response:
+                  $ref: "#/components/examples/ExaminationExample"
+        "403":
+          description: >-
+            Value of the id and the data id is mismatching. Details are
+            provided in the response body.
+        "404":
+          description: Examination with such ID does not exist
+   
+    delete:
+      tags:
+        - examinations
+      summary: Deletes specific examination for specific patient
+      operationId: deleteExamination
+      description: Use this method to delete the specific examination for the specified patient.
+      parameters:
+        - in: path
+          name: patientId
+          description: pass the id of the patient for whom the examination is being deleted
+          required: true
+          schema:
+            type: string
+        - in: path
+          name: id
+          description: pass the id of the particular examination to be deleted.
+          required: true
+          schema:
+            type: integer
+      responses:
+        "204":
+          description: Examination is deleted
+        "404":
+          description: Examination with ID does not exist
+
+
 components:
   schemas:
     WaitingListEntry:
@@ -285,6 +407,39 @@ components:
           example: 20
       example:
         $ref: "#/components/examples/ConditionExample"  
+    Examination:
+      type: object
+      required: [ "id", "patientId", "day", "startTime", "endTime", "name" ]
+      properties:
+        id:
+          type: number
+          example: 1
+          description: Unique identifier of the examination
+        patientId:
+          type: string
+          example: 460527-jozef-pucik
+          description: Unique identifier of the patient
+        day:
+          type: string
+          example: monday
+          description: The day of the examination
+        startTime:
+          type: string
+          format: time
+          example: "10:00:00"
+          description: The start time of the examination
+        endTime:
+          type: string
+          format: time
+          example: "11:00:00"
+          description: The end time of the examination
+        name:
+          type: string
+          example: Ohladanie pacienta
+          description: Name of the examination
+      example:
+          $ref: "#/components/examples/ExaminationExample"  
+  
   examples:
     WaitingListEntryExample:
       summary: Ľudomír Zlostný waiting
@@ -357,4 +512,16 @@ components:
         - value: Odber krvi
           code: blood-test
           typicalDurationMinutes: 10
-      
+    ExaminationExample:
+      summary: Sample of examination
+      description: |
+        Example of examination that can be performed on patient
+     #id", "patientId", "day", "startTime", "endTime", "name
+      value:
+        id: 1
+        patientId: 460527-jozef-pucik
+        day: pondelok
+        startTime: "10:00:00"
+        endTime: "11:00:00"
+        name: Ohladanie pacienta
+       
