# internal/ambulance_wl/model_examination.go
@@ -1,0 +1,32 @@
+/*
+ * Waiting List Api
+ *
+ * Ambulance Waiting List management for Web-In-Cloud system
+ *
+ * API version: 1.0.0
+ * Contact: xlytvynova@stuba.sk
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package ambulance_wl
+
+type Examination struct {
+
+	// Unique identifier of the examination
+	Id float32 `json:"id"`
+
+	// Unique identifier of the patient
+	PatientId string `json:"patientId"`
+
+	// The day of the examination
+	Day string `json:"day"`
+
+	// The start time of the examination
+	StartTime string `json:"startTime"`
+
+	// The end time of the examination
+	EndTime string `json:"endTime"`
+
+	// Name of the examination
+	Name string `json:"name"`
+}
